k8s/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
        version: v1
    spec:
      serviceAccountName: server  
      containers:
        - name: server
          image: aminbenmansour/server:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: server
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
  - port: 8000
    name: http-server
    targetPort: 8000
