k8s/verifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verifier
  labels:
    app: verifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verifier
  template:
    metadata:
      labels:
        app: verifier
        version: v1
    spec:
      serviceAccountName: verifier
      volumes:
      - name: keri-data
        persistentVolumeClaim:
          claimName: keria-pvc
      containers:
        - name: verifier
          image: aminbenmansour/verifier:1.0
          imagePullPolicy: Always
          volumeMounts:
            - name: keri-data
              mountPath: /usr/local/var/keri/
          ports:
            - containerPort: 7676
---
apiVersion: v1
kind: Service
metadata:
  name: verifier
  labels:
    app: verifier
spec:
  selector:
    app: verifier
  ports:
    - name: http-verifier
      port: 7676
      targetPort: 7676
