k8s/keria.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keria
  labels:
    app: keria
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: keria
  template:
    metadata:
      labels:
        app: keria
        version: v1
    spec:
      serviceAccountName: keria
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: keria-pvc
      containers:
        - name: keria
          image: aminbenmansour/keria:1.0
          volumeMounts:
            - name: data
              mountPath: /usr/local/var/keri/
          ports:
            - containerPort: 3901
            - containerPort: 3902
            - containerPort: 3903
      
---
apiVersion: v1
kind: Service
metadata:
  name: keria
  labels:
    app: keria
spec:
  selector:
    app: keria
  type: NodePort
  ports:
    - name: http-admin
      port: 3901
      targetPort: 3901
    - name: http-http
      port: 3902
      targetPort: 3902
    - name: http-boot
      port: 3903
      targetPort: 3903
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keria-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 3901
        name: http-admin
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 3902
        name: http-http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 3903
        name: http-boot
        protocol: HTTP
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keria
spec:
  hosts:
  - "*"
  gateways:
  - keria-gateway
  http:
  - match:
    - port: 3901
    route:
      - destination:
          host: keria.default.svc.cluster.local
          port:
            number: 3901
  - match:
    - port: 3902
    route:
      - destination:
          host: keria.default.svc.cluster.local
          port:
            number: 3902
  - match:
    - port: 3903
    route:
      - destination:
          host: keria.default.svc.cluster.local
          port:
            number: 3903
